# rag-api

./: .dockerignore  .example.env  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  SUBMISSION.md  demo_full_flow.sh  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tech_stack_decisions.md  test_document.txt
app/: app.py  config.py
app/api/: __init__.py  conversation.py  ingestion.py
app/database/: db.py  redis_client.py
app/models/: Booking.py  Chunk.py  Document.py  __init__.py
app/services/: __init__.py  booking_parser.py  chat_memory.py  chunking.py  conversational_rag.py  embedding.py  embedding_optimized.py  llm_service.py  text_extraction.py  vectors.py
docs/: ONNX_OPTIMIZATION.md  PalmMind_Task_Requirements.md  TESTING.md  data-flow.mermaid
onnx_models/all-MiniLM-L6-v2/: config.json
scripts/: convert_to_onnx.py  migrate_db.py
